# flom-py

./: Pipfile  README.md  setup.py  tox.ini
src/: CMakeLists.txt  binding.cpp
src/binding/: CMakeLists.txt  binding.cpp  declarations.hpp  effector.cpp  enums.cpp  errors.cpp  frame.cpp  interpolate.cpp  interpolate.hpp  motion.cpp  ranges.cpp
test/: conftest.py  test_effector.py  test_frame.py  test_io.py  test_range.py
test/data/: sample.fom
